fix: Align elements in header

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 4px;
 }
 
 .logo {
@@ -9,12 +14,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 12px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
 }
+
+li {
+  margin: 8px;
+}
+
 
 a {
   font-size: 22px;
